--- a/style.css
+++ b/style.css
@@ -115,10 +115,10 @@ header {
   padding: 6rem 0;
   text-align: center;
 }
-.hero h2 {
+/*.hero h2 {
   font-size: 2.2rem;
   font-family: 'Playfair Display', serif;
-}
+}*/
 .tagline { font-size: 1.2rem; margin-top: 0.5rem; font-weight: 600; }
 .intro { margin-top: 1rem; font-size: 1.1rem; max-width: 700px; margin: auto; }
 
@@ -216,6 +216,7 @@ section h2 {
   margin-bottom: 1rem;
 }
 
+.hero h2,
 .experience h2,
 .projects h2,
 .research h2 {
@@ -227,6 +228,8 @@ section h2 {
   color: #333;
   position: relative;
 }
+
+.hero h2::after,
 .experience h2::after,
 .projects h2::after,
 .research h2::after {
