--- a/style.css
+++ b/style.css
@@ -112,8 +112,9 @@ header {
    HERO
 ============================= */
 .hero {
-  padding: 6rem 0;
+  padding: 3rem;
   text-align: center;
+  margin-top: 0;
 }
 /*.hero h2 {
   font-size: 2.2rem;
