--- a/style.css
+++ b/style.css
@@ -112,10 +112,12 @@ header {
    HERO
 ============================= */
 .hero {
-  padding: 3rem;
+  padding: 2rem;
+  padding-bottom: 4rem;
   text-align: center;
   margin-top: 0;
 }
+
 /*.hero h2 {
   font-size: 2.2rem;
   font-family: 'Playfair Display', serif;
