--- a/style.css
+++ b/style.css
@@ -610,7 +610,17 @@ section h2 {
 /* PDF container + iframe */
 .pdf-container {
   width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  position: relative;
   margin: 1rem 0;
+}
+
+.pdf-container iframe {
+  width: 100%;
+  height: 100vh;
+  border: none;
+  display: block;
 }
 
 .pdf-frame {
